-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.556 2009-06-26 04:05:54 guru Exp $
-----------------------------------------------------------------------------------------

2009-06-25	pwessel
	* gmt_grdio.c:		Change for reasonable x/y range if units has the words "longitude"
				or "latitude" before concluding we have geodetic coordinates.

2009-06-24	jluis
	* x2sys/x2sys_merge.c:	New program to merge updated COEs table into a main COE table database
	* mgd77/mgd77.c:	Do not use any GMT_XXX to access ascii files on creation/writting so that
				it can work on Windows as well (improvment on 2009-06-07 changes).

2009-06-24	pwessel
	* ps2raster.c:		Exceeded memory allocation for out_file.  Now in static memory.

2009-06-24	jluis
	* ps2raster.c:		Do not crash if a name with extension is given to -F (rip the extension)

2009-06-23	pwessel
	* mgd77/mgd77manage.c:	-AE will ignore the verification status and process e77 anyway.
	* mgd77/mgd77path.c:	Added -P- to just list the IDs and not the full paths

2009-06-21	pwessel
	* gmt_support.c:	Given -I601+/601+ the y_inc was not treated correctly

2009-06-20	pwessel
	* gmt_shore.c:		Added support for the +p<percent> modifier to limit features whose
				area is less the <percent> of the corresponding full-resolution polygon

2009-06-19	pwessel
	* gmt_globals.h:	Change default ascii format to %.12g to avoid loss of precision.
				Changed default for OUTPUT_DEGREE_FORMAT to D (-180/180) so it
				is the same as that for PLOT_DEGREE_FORMAT.
2009-06-18	pwessel
	* misc/gmtstitch.c:	Enhanced -T option to eliminate connections when the 2nd closest
				pair is too close.  Also added -C option to simply separate the
				open from the closed polygons (no stitching).

2009-06-17	pwessel
	* grdfft.c:		Now also has Butterworth band-pass filter.
	
2009-06-17	remko
	* gmt_init.c (GMT_begin):	GMT_history should come AFTER reading defaults, otherwise